--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "postinstall": "npm run prod"
   },
   "author": "Haiz Oppenheimer",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/haizop/gameshifting"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/haizop/gameshifting"
   },
   "license": "MIT",
   "devDependencies": {
+    "file-loader": "^0.9.0",
+    "url-loader": "^0.5.7",
     "webpack-dev-server": "1.14.0"
   },
   "engines": {
