--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expect": "^1.13.4",
     "expect-jsx": "^2.2.2",
     "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
     "jquery": "^2.2.0",
     "lodash": "^3.10.1",
     "mocha": "^2.3.4",
@@ -49,6 +50,7 @@
     "react-dom": "0.14.5",
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
+    "url-loader": "0.5.7",
     "webpack": "1.13.1"
   },
   "babel": {
