--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "mocha": "^2.3.4",
     "node-sass": "3.4.2",
     "node-uuid": "^1.4.7",
-    "react": "0.14.6",
+    "react": "^15.1.0",
     "react-addons-css-transition-group": "^0.14.6",
     "react-addons-test-utils": "^0.14.5",
-    "react-dom": "0.14.5",
+    "react-addons-transition-group": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "reactstrap": "^1.5.0",
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
