--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-react-hmre": "^1.1.1",
     "webpack-dev-server": "1.14.0"
   },
   "engines": {
@@ -27,26 +28,26 @@
     "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
-    "babel-preset-react-hmre": "1.0.1",
     "babel-preset-stage-1": "6.3.13",
     "babel-resolver": "0.0.18",
     "classnames": "2.2.3",
     "css-loader": "0.23.1",
     "dotenv": "1.2.0",
-    "expect": "^1.13.4",
-    "expect-jsx": "^2.2.2",
+    "expect": "^1.20.1",
+    "expect-jsx": "^2.6.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^0.9.0",
-    "jquery": "^2.2.0",
+    "jquery": "^3.0.0",
     "lodash": "^3.10.1",
-    "mocha": "^2.3.4",
+    "mocha": "^2.5.3",
     "node-sass": "3.4.2",
     "node-uuid": "^1.4.7",
     "react": "^15.1.0",
-    "react-addons-css-transition-group": "^0.14.6",
-    "react-addons-test-utils": "^0.14.5",
+    "react-addons-css-transition-group": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
     "react-addons-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-toggle-switch": "^2.1.2",
     "reactstrap": "^1.5.0",
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
